--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^9.39.1"
   },
   "dependencies": {
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "viz.js": "^2.1.2"
   }
 }
