--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       {
         "command": "munge-feature-manager.createVisualization",
         "title": "Create visualization"
+      },
+      {
+        "command": "munge-feature-manager.createMinConfig",
+        "title": "Create minimal config"
       }
     ],
     "keybindings": [
@@ -33,6 +37,10 @@
       {
         "command": "munge-feature-manager.createVisualization",
         "key": "ctrl+shift+d"
+      },
+      {
+        "command": "munge-feature-manager.createMinConfig",
+        "key": "ctrl+shift+q"
       }
     ]
   },
