activate when java file appears

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["workspaceContains:**/*.java"],
   "main": "./extension.js",
   "contributes": {
     "commands": [
